--- a/public/help/index.html
+++ b/public/help/index.html
@@ -22,7 +22,7 @@
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
         <!-- Title -->
-        <span class="mdl-layout-title">Compartilhagram</span>
+        <span class="mdl-layout-title">Exchangeagram</span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
@@ -38,7 +38,7 @@
       </div>
     </header>
     <div class="mdl-layout__drawer">
-      <span class="mdl-layout-title">Compartilhagram</span>
+      <span class="mdl-layout-title">Exchangeagram</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/">Feed</a>
         <a class="mdl-navigation__link" href="/help">Help</a>
