--- a/public/index.html
+++ b/public/index.html
@@ -98,9 +98,9 @@
     </main>
   </div>
 </div>
-<script defer src="/src/js/material.min.js"></script>
 <script src="/src/js/promise.js"></script>
 <script src="/src/js/fetch.js"></script>
+<script src="/src/js/material.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/idb@7/build/umd.js"></script>
 <script src="/src/js/domain.js"></script>
